third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/borrow_local_field_invalid.old.exp

Diagnostics:
error: cannot mutably borrow since immutable references exist
   ┌─ tests/reference-safety/v1-tests/borrow_local_field_invalid.move:13:17
   │
12 │         let f = &v.f;
   │                 ----
   │                 ││
   │                 │previous local borrow
   │                 used by field borrow
13 │         let s = &mut v;
   │                 ^^^^^^ mutable borrow attempted here
14 │         *s = S { f: 0, g: 0 };
   │         --------------------- requirement enforced here
15 │         *f;
   │         -- conflicting reference `f` used here

error: cannot immutably borrow since mutable references exist
   ┌─ tests/reference-safety/v1-tests/borrow_local_field_invalid.move:19:17
   │
18 │         let f = &mut v.f;
   │                 --------
   │                 │    │
   │                 │    previous mutable local borrow
   │                 used by mutable field borrow
19 │         let s = &v;
   │                 ^^ immutable borrow attempted here
20 │         *s;
   │         -- requirement enforced here
21 │         *f;
   │         -- conflicting reference `f` used here
